Some blocks have been completed

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"gulp-zip": "latest",
 		"html-webpack-plugin": "latest",
 		"inputmask": "latest",
+		"js-datepicker": "^5.18.0",
 		"lightgallery": "latest",
 		"load-plugins": "latest",
 		"mini-css-extract-plugin": "2.4.7",
